# nojs-chat

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  config.example.yml  docker-compose.yml  torrc
src/: main.rs
templates/: chat.html  layout.html  login.html  register.html
